--- a/shippable.yml
+++ b/shippable.yml
@@ -1,8 +1,8 @@
 language: go
-build_image: shippableimages/ubuntu1404_go
+build_image: drydock/u12golpls:tip
 
 go:
-  - 1.2
+  - 1.5
 
 # Addons used by app
 addons:
